# MCDScanner

./: .gitignore  CMakeLists.txt
src/discord/: config.h  incident.cpp  incident.h  main.cpp  processMessages.cpp  processMessages.h
